2015-09-10  Andy Buckley  <andy.buckley@cern.ch>

	* Allow access to MissingMomentum projection via WFinder.

	* Adding extra methods to MissingMomentum, to make it more user-friendly.

2015-08-18  Andy Buckley  <andy.buckley@cern.ch>

	* Rename xs and counter AOs to start with underscores, and modify
	rivet-cmphistos to skip AOs whose basenames start with _.

2015-08-17  Andy Buckley  <andy.buckley@cern.ch>

	* Add writing out of cross-section and total event counter by
	default. Need to add some name protection to avoid them being
	plotted.

2015-08-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add templated versions of Analysis::refData() to use data types
	other than Scatter2DPtr, and convert the cached ref data store to
	generic AnalysisObjectPtrs to make it possible.

2015-07-29  Andy Buckley  <andy.buckley@cern.ch>

	* Add optional Cut arguments to all the Jet tag methods.

	* Add exception handling and pre-emptive testing for a
	non-writeable output directory (based on patch from Lukas
	Heinrich).

2015-07-02  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Tidy up ATLAS higgs combination analysis.
	* Add ALICE kaon, pion analysis (ALICE_2015_I1357424)
	* Add ALICE strange baryon analysis (ALICE_2014_I1300380)
	* Add CDF ZpT measurement in Z->ee events analysis (CDF_2012_I1124333)
	* Add validated ATLAS W+charm measurement (ATLAS_2014_I1282447)
	* Add validated CMS jet and dijet analysis (CMS_2013_I1208923)

2015-07-01  Andy Buckley  <andy.buckley@cern.ch>

	* Define a private virtual operator= on Projection, to block
	'sliced' accidental value copies of derived class instances.

	* Add new muon-in-jet options to FastJet constructors, pass that
	and invisibles enums correctly to JetAlg, tweak the default
	strategies, and add a FastJets constructor from a
	fastjet::JetDefinition (while deprecating the plugin-by-reference
	constructor).

2015-07-01  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add D0 phi* measurement (D0_2015_I1324946).
